# Rpi_lx07

./: .gitignore  git基本使用.txt
ReleaseSw/rpi4b/Touch_GraylevelTest/45hz/: appTouchAreaTest
ReleaseSw/rpi5b/: Readme.txt
ReleaseSw/rpi5b/Touch_GraylevelTest/: appTouchAreaTest
Touch_GraylevelTest/: CMakeLists.txt  CMakeLists.txt.user.9b861bd  CMakeLists_copy.txt  ColorChangePage.qml  DefaultPage.qml  Main.qml  PaintPage.qml  build.tar.xz  cppdata.cpp  lx07test.qml  main.cpp  uart.cpp  x86-toolchain.cmake
Touch_TpTest/: CMakeLists.txt  CalibrationPage.qml  DefaultPage.qml  Main.qml  PaintPage.qml  TpTimeOut.cpp  autobuild.sh  cppdata.cpp  cppdata.h  main.cpp  timeout.ini
Touch_TpTest_addTimeout/: CMakeLists.txt  ColorChangePage.qml  Main.qml  PaintPage.qml  TpTimeOut.h  main.cpp  toolchain.cmake
挂载sd卡步骤/rpi4b/: config_hdmi_60hz.txt  rpi4b挂载sd卡.txt  挂载系统.txt
挂载sd卡步骤/rpi5b/: cmdline.txt  rpi5b挂载sd卡.txt  挂载系统.txt
